[gd_scene load_steps=5 format=3 uid="uid://drx0y4yklov68"]

[ext_resource type="Theme" uid="uid://d0quapjxkreie" path="res://assets/main_theme.tres" id="1_3d3rt"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_q6jwy"]
[ext_resource type="PackedScene" uid="uid://kmrgqmyonlbp" path="res://main.tscn" id="2_t0aa8"]
[ext_resource type="PackedScene" uid="uid://b6iokkqme5chq" path="res://credits.tscn" id="4_8ao3f"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_q6jwy")
game_scene = ExtResource("2_t0aa8")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0.0196078, 0.0196078, 1)

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -190.5
offset_top = 28.0
offset_right = 190.5
offset_bottom = 94.0
grow_horizontal = 2
theme = ExtResource("1_3d3rt")
theme_override_colors/font_color = Color(0.803922, 0.776471, 0.913725, 1)
theme_override_font_sizes/font_size = 50
text = "Tiny Expedition"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -86.0
offset_right = 91.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
theme = ExtResource("1_3d3rt")
theme_override_font_sizes/font_size = 60
text = "Start"
flat = true

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../StartButton")
focus_previous = NodePath("../StartButton")
theme = ExtResource("1_3d3rt")
text = "Credits"
flat = true

[node name="Credits" parent="." instance=ExtResource("4_8ao3f")]
visible = false

[node name="BackButton" type="Button" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -78.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_3d3rt")
theme_override_font_sizes/font_size = 30
text = "Back"
flat = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
